# rustalyzer

./: Cargo.toml  DOCS.md  LICENSE  OPTIMIZATIONS.md  README.md  TODO.md  results.json
src/: main.rs
